# rec-diag-bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: local.yaml
scripts/: _bootstrap.py  aggregate_metrics.py  aggregate_multiseed.py  analyze_oracle_ceiling.py  analyze_rq3.py  build_cara_from_pools.py  diagnose_coverage.py  end2end_ci.py  paired_bootstrap.py  probe_freshness_retrieval.py  probe_intent_retrieval.py  probe_selective_rerank.py  run_dataset.py  run_downstream_paired.py  run_end2end.py  run_learned_fusion.py  run_lhf_downstream.py  run_quota_allocation.py  run_recallk_curve.py  run_rerank_variants.py  run_retrieval.py  run_second_llms.py
src/coldtail/: config.py  graph_adapt.py  metrics.py  utils.py
src/coldtail/experiments/: common.py  failure_analysis.py  gala_ablation.py  gala_evidence.py  report.py  retrieval_coverage.py  run_baselines.py  run_cross_encoder.py  run_graph_aware.py  run_llm_rerank.py  timing.py
src/coldtail/recommenders/: base.py  bpr.py  content_tfidf.py  itemknn.py  lightgcn.py  markov.py  popularity.py  sasrec.py  sbert_retrieval.py  two_tower.py
