[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rec-diag-bench"
version = "0.1.0"
description = "Diagnostic benchmark for LLM-based recommendation failure modes under cold-start and long-tail conditions"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
